--- a/my-proof.manifest.template
+++ b/my-proof.manifest.template
@@ -8,6 +8,8 @@ sgx.max_threads = 4
 # Using { passthrough = true } allows values to be passed in from the Satya node's /RunProof endpoint
 loader.env.PASSCODE = { passthrough = true }
 
+loader.entrypoint = { path = "/my_proof/__main__.py" }
+
 # Gramine gives a warning that allowed_files is not safe in production, but it
 # should generally be fine for our use case which inherently assumes that input
 # files are untrusted until proven otherwise.
